# client-desktop

./: .gitattributes  .gitignore  CHANGELOG.md  HISTORY.md  MANIFEST.in  Makefile  README.PyPI.md  README.md  REVISION_HISTORY.md  ROADMAP.md  bmn-client  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
bmnclient/: __init__.py  __main__.py  application.py  coin_interfaces.py  coin_models.py  command_line.py  config.py  debug.py  debug_manager.py  gcd.py  gcd_impl.py  key_manager.py  key_store.py  language.py  loading_level.py  logger.py  meta.py  orderedset.py  os_environment.py  platform.py  root_key.py  signal_handler.py  version.py
contrib/: exclude_list  main.py  pyinstaller.spec
src/: Makefile  __main__.py  client-qml.qmlproject  client.pro  qtquickcontrols2.conf  requirements_dev.txt  requirements_prod.txt  resources.qrc
tests/: __init__.py  test_address.py  test_aes.py  test_backup.py  test_bip32.py  test_bip38.py  test_bip39.py  test_coins.py  test_coins_hd.py  test_coins_mnemonic.py  test_config.py  test_crypto.py  test_crypto_base58.py  test_crypto_bech32.py  test_crypto_secp256k1.py  test_data.py  test_database.py  test_database_vfs.py  test_fee_man.py  test_hd.py  test_key1.py  test_key2.py  test_key_store.py  test_meta.py  test_mnemonic.py  test_mtx.py  test_network.py  test_network_query.py  test_orderedset.py  test_pycryptography.py  test_queue.py  test_root_key.py  test_secp256k1.py  test_segwit.py  test_server.py  test_translation.py  test_tx_ctr.py  test_util.py  test_utils.py  test_utils_serialize.py
(+782 files in other folders)
