[metadata]
name = bmnclient
version = attr: bmnclient.__version__
description = Cryptocurrency Wallet
long_description = file:README.md
long_description_content_type = text/markdown

license = GNU General Public License v3 (GPLv3)
license_files = LICENSE

author = BitMarket Network
author_email = support@bitmarket.network
url = https://bitmarket.network
download_url = https://github.com/BitMarketNetwork/client-desktop/releases
project_urls =
    Source = https://github.com/BitMarketNetwork/client-desktop

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
keywords =
    bmnclient
    bitcoin
    bitcoin-wallet
    cryptocurrency-wallet
    wallet
platforms =
    win32
    darwin
    linux
